--- a/netlify.toml
+++ b/netlify.toml
@@ -5,3 +5,6 @@ command = "hugo"
 [context.production.environment]
 HUGO_VERSION = "0.54.0"
 HUGO_ENV = "production"
+
+[context.production]
+  publish = "layouts/de"
